--- a/re2rt/file_extensions.json
+++ b/re2rt/file_extensions.json
@@ -73,6 +73,7 @@
     "wcsw": 5,
     "wcswn": 2,
     "wcmsw": 4,
+    "bnk": 2,
     "pck": 3,
     "wms": 5,
     "wpi": 3,
@@ -86,31 +87,51 @@
     "rcfg": 3,
     "vsdf": 2109101636,
     "fxct": 4,
-    "lfa": 4,
-    "bnk": 2
+    "lfa": 4
   },
   "Info": {
     "mdf2": {
       "Locales": [],
+      "Type": "MaterialDefinition",
       "Version": 21,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mesh": {
       "Locales": [],
+      "Type": "Mesh",
       "Version": 2109108288,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "tex": {
-      "Locales": [],
+      "Locales": [
+        "en",
+        "ar",
+        "de",
+        "es",
+        "fr",
+        "hi",
+        "it",
+        "ja",
+        "ko",
+        "pl",
+        "ptbr",
+        "ru",
+        "th",
+        "zhcn",
+        "zhtw"
+      ],
+      "Type": "Texture",
       "Version": 34,
       "CanHaveX64": true,
       "CanNotHaveX64": true,
+      "CanHaveLang": true,
       "CanNotHaveLang": true
     },
     "pfb": {
       "Locales": [],
+      "Type": "Prefab",
       "Version": 17,
       "CanHaveX64": true,
       "CanNotHaveX64": true,
@@ -124,18 +145,21 @@
     },
     "scn": {
       "Locales": [],
+      "Type": "Scene",
       "Version": 20,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "psop": {
       "Locales": [],
+      "Type": "PSOPatch",
       "Version": 1,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "msg": {
       "Locales": [],
+      "Type": "Message",
       "Version": 50397457,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -154,29 +178,28 @@
     },
     "gui": {
       "Locales": [],
+      "Type": "Gui",
       "Version": 430027,
-      "CanNotHaveX64": true,
-      "CanNotHaveLang": true
-    },
-    "34": {
-      "Locales": [],
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "user": {
       "Locales": [],
+      "Type": "Userdata",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mmtr": {
       "Locales": [],
+      "Type": "MasterMaterial",
       "Version": 2109101635,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mov": {
       "Locales": [],
+      "Type": "Movie",
       "Version": 1,
       "CanHaveX64": true,
       "CanNotHaveX64": true,
@@ -184,114 +207,133 @@
     },
     "cfil": {
       "Locales": [],
+      "Type": "CollisionFilter",
       "Version": 7,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "cmat": {
       "Locales": [],
+      "Type": "CollisionMaterial",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "cdef": {
       "Locales": [],
+      "Type": "CollisionDefinition",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "def": {
       "Locales": [],
+      "Type": "DynamicsDefinition",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "motfsm2": {
       "Locales": [],
+      "Type": "MotionFsm2",
       "Version": 42,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "uvar": {
       "Locales": [],
+      "Type": "Uvar",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "fsmv2": {
       "Locales": [],
+      "Type": "Fsm2",
       "Version": 40,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mot": {
       "Locales": [],
+      "Type": "Motion",
       "Version": 492,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mcol": {
       "Locales": [],
+      "Type": "MeshCollider",
       "Version": 13020,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rtex": {
       "Locales": [],
+      "Type": "RenderTexture",
       "Version": 5,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rmesh": {
       "Locales": [],
+      "Type": "RigidBodyMesh",
       "Version": 23010,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "motlist": {
       "Locales": [],
+      "Type": "MotionList",
       "Version": 524,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rbs": {
       "Locales": [],
+      "Type": "RigidBodySet",
       "Version": 32,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "motbank": {
       "Locales": [],
+      "Type": "MotionBank",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rcol": {
       "Locales": [],
+      "Type": "Rcol",
       "Version": 20,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rdd": {
       "Locales": [],
+      "Type": "Ragdoll",
       "Version": 32021,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mcamlist": {
       "Locales": [],
+      "Type": "MotionCameraList",
       "Version": 19,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "chain": {
       "Locales": [],
+      "Type": "Chain",
       "Version": 46,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "jmap": {
       "Locales": [],
+      "Type": "JointMap",
       "Version": 19,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -304,108 +346,126 @@
     },
     "clip": {
       "Locales": [],
+      "Type": "Clip",
       "Version": 43,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "lod": {
       "Locales": [],
+      "Type": "Lod",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ncf": {
       "Locales": [],
+      "Type": "NetworkConfig",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "sss": {
       "Locales": [],
+      "Type": "SSSProfile",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "tml": {
       "Locales": [],
+      "Type": "Timeline",
       "Version": 43001,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "efx": {
       "Locales": [],
+      "Type": "Efx",
       "Version": 2818689,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "uvs": {
       "Locales": [],
+      "Type": "UVSequence",
       "Version": 7,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mcambank": {
       "Locales": [],
+      "Type": "MotionCameraBank",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "bhvt": {
       "Locales": [],
+      "Type": "BehaviorTree",
       "Version": 40,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "fbxskel": {
       "Locales": [],
+      "Type": "FbxSkeleton",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "jcns": {
       "Locales": [],
+      "Type": "JointConstraints",
       "Version": 19,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "gpuc": {
       "Locales": [],
+      "Type": "GpuCloth",
       "Version": 65,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ucurve": {
       "Locales": [],
+      "Type": "UserCurve",
       "Version": 43,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "aimap": {
       "Locales": [],
+      "Type": "AiMap",
       "Version": 41,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "aimapattr": {
       "Locales": [],
+      "Type": "AiMapAttribute",
       "Version": 42,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ies": {
       "Locales": [],
+      "Type": "IESLight",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "lprb": {
       "Locales": [],
+      "Type": "LightProbe",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
+      "Type": "Probe",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -536,22 +596,7 @@
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
-    "stm": {
-      "Locales": [],
-      "CanNotHaveX64": true,
-      "CanNotHaveLang": true
-    },
-    "2": {
-      "Locales": [],
-      "CanNotHaveX64": true,
-      "CanNotHaveLang": true
-    },
-    "3": {
-      "Locales": [],
-      "CanNotHaveX64": true,
-      "CanNotHaveLang": true
-    },
-    "pck": {
+    "bnk": {
       "Locales": [
         "en",
         "de",
@@ -559,13 +604,32 @@
         "fr",
         "it",
         "ja",
+        "zhcn",
+        "stm"
+      ],
+      "Type": "SoundBank",
+      "Version": 2,
+      "CanHaveStm": true,
+      "CanNotHaveX64": true,
+      "CanHaveLang": true
+    },
+    "pck": {
+      "Locales": [
+        "en",
+        "stm",
+        "de",
+        "es",
+        "fr",
+        "it",
+        "ja",
         "zhcn"
       ],
+      "Type": "SoundPackage",
       "Version": 3,
       "CanHaveX64": true,
       "CanHaveStm": true,
-      "CanHaveLang": true,
-      "CanNotHaveLang": true
+      "CanNotHaveX64": true,
+      "CanHaveLang": true
     },
     "wms": {
       "Locales": [],
@@ -581,12 +645,14 @@
     },
     "gcf": {
       "Locales": [],
+      "Type": "GUIConfig",
       "Version": 50397464,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "oft": {
       "Locales": [],
+      "Type": "OutlineFont",
       "Version": 1,
       "CanHaveX64": true,
       "CanNotHaveX64": true,
@@ -600,62 +666,61 @@
     },
     "ift": {
       "Locales": [],
+      "Type": "IconFont",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "sdf": {
-      "Locales": [],
+      "Locales": [
+        "stm"
+      ],
+      "Type": "sdf",
       "Version": 2109101635,
-      "CanHaveStm": true,
       "CanNotHaveX64": true,
+      "CanHaveLang": true,
       "CanNotHaveLang": true
     },
     "gpbf": {
       "Locales": [],
+      "Type": "GpuBuffer",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rtmr": {
       "Locales": [],
+      "Type": "RayTraceMaterialRedirect",
       "Version": 5,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "rcfg": {
       "Locales": [],
+      "Type": "rcfg",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "vsdf": {
       "Locales": [],
+      "Type": "VfxShader",
       "Version": 2109101636,
-      "CanNotHaveX64": true,
-      "CanNotHaveLang": true
-    },
-    "2109101635": {
-      "Locales": [],
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "fxct": {
       "Locales": [],
+      "Type": "fxct",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "lfa": {
       "Locales": [],
+      "Type": "Lensflare",
       "Version": 4,
       "CanNotHaveX64": true,
-      "CanNotHaveLang": true
-    },
-    "bnk": {
-      "Locales": [],
-      "Version": 2,
-      "CanHaveStm": true,
       "CanNotHaveLang": true
     }
   }
